--- a/ASSIGNMENTS/TAILWIND/LMS/viewbook.html
+++ b/ASSIGNMENTS/TAILWIND/LMS/viewbook.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="shortcut icon" href="/TAILWIND/ASSIGNMENTS/LMS/lblogo.jpeg" type="image/x-icon">
+    <link rel="shortcut icon" href="../LMS/lblogo.jpeg" type="image/x-icon">
     <title>LMS-view book</title>
 </head>
 <body>
     <body class="bg-gray-100">
         <div  class="grid grid-cols-2 shadow-md shadow-emerald-500/50  p-2">
             <div>
-                <img src="/TAILWIND/ASSIGNMENTS/LMS/logo.jpeg" alt="" class="w-18 h-16 flex justify-start">
+                <img src="../LMS/lblogo.jpeg" alt="" class="w-18 h-16 flex justify-start">
             </div>
             <div class="flex items-center justify-end p-2 space-x-8">
                     <a href="home.html"class="w-22 p-2 hover:ring-4 rounded-full ring-emerald-500">Home</a>
@@ -25,7 +25,7 @@
             <div class="bg-white shadow-md rounded-lg p-6">
                 <h1 class="text-2xl font-bold mb-4">kafka on the Shore</h1>
                 <div class="flex mb-6">
-                    <img src="/TAILWIND/ASSIGNMENTS/LMS/kos.jpeg" alt="Book Cover" class="w-48 h-72 rounded-md shadow-lg">
+                    <img src="../LMS/kos.jpeg" alt="Book Cover" class="w-48 h-72 rounded-md shadow-lg">
                     <div class="ml-6">
                         <p class="text-lg font-semibold">Author: <span class="font-normal">Haruki Murakami</span></p>
                         <p class="text-lg font-semibold">Genre: <span class="font-normal">Magical Realism</span></p>
@@ -47,7 +47,7 @@
             <div class="bg-white shadow-md rounded-lg p-6">
                 <h1 class="text-2xl font-bold mb-4">Mercury Island</h1>
                 <div class="flex mb-6">
-                    <img src="/TAILWIND/ASSIGNMENTS/LMS/mi.jpg" alt="Book Cover" class="w-48 h-72 rounded-md shadow-lg">
+                    <img src="../LMS/mi.jpg" alt="Book Cover" class="w-48 h-72 rounded-md shadow-lg">
                     <div class="ml-6">
                         <p class="text-lg font-semibold">Author: <span class="font-normal">Akhil P Dharmajan</span></p>
                         <p class="text-lg font-semibold">Genre: <span class="font-normal">Fantacy Thriller</span></p>
@@ -69,7 +69,7 @@
             <div class="bg-white shadow-md rounded-lg p-6">
                 <h1 class="text-2xl font-bold mb-4">The Girl Who Drank the Moon</h1>
                 <div class="flex mb-6">
-                    <img src="/TAILWIND/ASSIGNMENTS/LMS/tgwdm.jpeg" alt="Book Cover" class="w-48 h-72 rounded-md shadow-lg">
+                    <img src="../LMS/tgwdm.jpeg" alt="Book Cover" class="w-48 h-72 rounded-md shadow-lg">
                     <div class="ml-6">
                         <p class="text-lg font-semibold">Author: <span class="font-normal">Kelly Barnhill</span></p>
                         <p class="text-lg font-semibold">Genre: <span class="font-normal">Chilldren's Book</span></p>
