--- a/ACTIVITY/JS/0110A8/exc3.html
+++ b/ACTIVITY/JS/0110A8/exc3.html
@@ -11,8 +11,8 @@
      <script>
         // Defining person1 object
 const person1 = {
-    firstname: "John",
-    lastname: "Doe"
+    firstname: "Virat",
+    lastname: "Kohli"
 };
 
 // Defining printFullName function outside of any object
@@ -22,24 +22,19 @@ function printFullName() {
 
 // Defining two more person objects
 const person2 = {
-    firstname: "Jane",
-    lastname: "Smith"
+    firstname: "Satoru",
+    lastname: "Gojo"
 };
 
 const person3 = {
-    firstname: "Alice",
-    lastname: "Johnson"
+    firstname: "Jeon",
+    lastname: "Jungkook"
 };
+printFullName.call(person2); 
+printFullName.apply(person3);
 
-// Using the call method to invoke printFullName for person2
-printFullName.call(person2); // Full Name: Jane Smith
-
-// Using the apply method to invoke printFullName for person3
-printFullName.apply(person3); // Full Name: Alice Johnson
-
-// Using the bind method to create a new function for person1 and invoking it
 const boundFunction = printFullName.bind(person1);
-boundFunction(); // Full Name: John Doe
+boundFunction(); 
 
      </script>
 </body>
