--- a/ACTIVITY/JS/0110A8/exc2.html
+++ b/ACTIVITY/JS/0110A8/exc2.html
@@ -13,7 +13,7 @@
         function book (title,author,year){
             this.title = title,
             this.author =author,
-            this.year = year,
+            this.year = year
 
             this.getDetails = ()=>{
                 console.log(`Title : ${this.title}, Author : ${this.author}, Year : ${this.year}`);
