--- a/ACTIVITY/JS/0110A8/exc4.html
+++ b/ACTIVITY/JS/0110A8/exc4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Task Manager</title>
 </head>
 <body>
     <!-- Create a simple task manager. Allow users to input a task and add it to a list. Each task 
