--- a/ACTIVITY/JS/0310A9-PRACT.EXCS/MPM/structure.html
+++ b/ACTIVITY/JS/0310A9-PRACT.EXCS/MPM/structure.html
@@ -7,14 +7,16 @@
     <link rel="stylesheet" href="styling.css">
 </head>
 <body>
-    <h1>Movie Playlist Manager</h1>
+    <h1>Movie Playlist Manager</h1><br>
+    <div class="sub">
     <label for="movie">Enter a movie:</label>
-    <input type="text" id="movie"><br>
+    <input type="text" id="movie"><br><br>
     <label for="priority">Enter priority(1-high, 2-medium, 3-low):</label>
-    <input type="text" id="priority"><br>
+    <input type="text" id="priority"><br><br>
     <button onclick="addMovie()">Add movie</button>
     <ul id="movieList"></ul>
 
     <script src="functionality.js"></script>
+    </div>
 </body>
 </html>
