--- a/CERTI-APP/TAILWIND/home.html
+++ b/CERTI-APP/TAILWIND/home.html
@@ -16,7 +16,7 @@
     </div>
     <div class="">
         <div class="flex justify-center items-center mt-12">
-     <img class="w-40 h-40" src="/CSS/CLASSWORK/img/online_course.png" alt="">
+     <img class="w-40 h-40" src="online_course.png" alt="">
     </div>
         </div>
      <div class="flex justify-center items-center mt-12">
