--- a/CERTI-APP/TAILWIND/issuecerti.html
+++ b/CERTI-APP/TAILWIND/issuecerti.html
@@ -42,5 +42,8 @@
             </div>
         </div>
     </div>
+    <div>
+        <a href="viewcerti.html">View Certificate</a>
+    </div>
 </body>
 </html>
