--- a/CERTI-APP/TAILWIND/viewcerti.html
+++ b/CERTI-APP/TAILWIND/viewcerti.html
@@ -7,11 +7,15 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-200">
+    <div class="flex justify-end p-2 shadow-lg shadow-cyan-500">
+        <a class="bg-sky-500 rounded w-24 h-10 p-2 pl-6 mr-4 text-justify text-slate-100" href="home.html">Home</a>
+
+    </div>
     <div class="text-center text-4xl font-extrabold mt-24">
         <h2>Kerala Blockchain Academy</h2>
     </div>
     <div class="flex justify-center items-center mt-12">
-        <img class="w-40 h-40"  src="/CSS/CLASSWORK/img/online_course.png" alt="">
+        <img class="w-40 h-40"  src="online_course.png" alt="">
     </div>
     <div class="text-center mt-12">
             <p>This is to certify that ,<b>n</b><br>has successfully completed <b> Blockchain Foundation</b><br>with<b> S</b> on<b> 2024-08-07</b></p>
