--- a/KBA-COURSE/TAILWIND/addcourse.html
+++ b/KBA-COURSE/TAILWIND/addcourse.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-      <div class="bg-purple-400">
+      <div class="bg-purple-400 p-4">
         <img class="size-16" src="../TAILWIND/images/kbalogo.png" alt="">
         <div class="bg-purple-400  text-white flex justify-end space-x-3">
           <a href="homepage_htmlfile.html">Home</a>
