--- a/ASSIGNMENTS/JAVASCRIPT/qus3.html
+++ b/ASSIGNMENTS/JAVASCRIPT/qus3.html
@@ -17,15 +17,15 @@
         function compareNumbers(){
             let num1= parseFloat(document.getElementById("num1").value);
             let num2= parseFloat(document.getElementById("num2").value);
-            let result;
+            let result=document.getElementById("result");
             if(num1>num2){
-                result= num1 + " is greater than " + num2;
+                result.textContent=(`first number ${num1} is greater than second number ${num2}`)
             }else if(num1<num2){
-                result= num1 + " is less than " + num2;
+                result.textContent=(`first number ${num1} is less than second number ${num2}`)
             }else{
-                result= num1 + " is equal to " + num2;
+                result.textContent=(`first number ${num1} is equal to second number ${num2}`)
             }
-            document.getElementById("result").textContent=result
+            
         }
     </script>
 </body>
