--- a/ASSIGNMENTS/JAVASCRIPT/qus6.html
+++ b/ASSIGNMENTS/JAVASCRIPT/qus6.html
@@ -8,8 +8,27 @@
 <body>
     <label for="array">Enter element:</label>
     <input type="text" id="array">
+    <button onclick="addElement()">Add</button>
+    <button onclick="display()">Display</button>
+    <p id="result"></p>
     <script>
         let array=[];
+
+        function addElement(){
+            const element =document.getElementById("array").value;
+            if(element){
+                array.push(element);
+            }
+            document.getElementById("array").value="";
+        }
+        function display(){
+            const result=document.getElementById("result");
+            if(array.length>0){
+                for(i=0;i<array.length;i++){
+                    result.textContent += array[i]+ " ";
+                }
+            }
+        }
         
     </script>
 
