--- a/CERTI-APP/TAILWIND/home.html
+++ b/CERTI-APP/TAILWIND/home.html
@@ -10,6 +10,7 @@
     <div class="flex justify-end p-2 shadow-lg shadow-cyan-500">
          <a class="bg-sky-500 rounded w-24 h-10 p-2 pl-6 mr-4 text-justify text-slate-100" href="home.html">Home</a>
                 <a class="rounded w-40 h-10 p-2 pl-6 text-justify" href="issuecerti.html">Issue Certificate</a>
+                <a class="rounded w-40 h-10 p-2 pl-6 text-justify" href="login.html">Sign In</a>
     </div>
     <div class="text-center text-4xl font-extrabold mt-24">
      <h1>Certificate Dapp</h1>
