--- a/CERTI-APP/TAILWIND/issuecerti.html
+++ b/CERTI-APP/TAILWIND/issuecerti.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="mt-4"><label for="date">Issue Date</label></div>
                 <div  class="mt-4"><input class="w-80 h-9 ring-2 hover:ring-4" type="date"></div>
-                <div><button  class="mt-4 ml-28 border-2 border-stone-950 bg-amber-300 px-2  focus:ring-2 ring-blue-500">Add Course</button></div>
+                <div><button  class="mt-4 ml-28 border-2 border-violet-450 bg-violet-600 px-2  focus:ring-2 ring-blue-500">Add Course</button></div>
             </div>
         </div>
     </div>
