--- a/KBA-COURSE/FRONTEND/login.html
+++ b/KBA-COURSE/FRONTEND/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="stylecss/style.css">
+    <!-- <link rel="stylesheet" type="text/css" href="stylecss/style.css"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
 
@@ -34,6 +34,7 @@
 
             const response=await fetch("http://127.0.0.1:8000/login",{
                 method:"POST",
+                credentials:'include',
                 headers:{
                     'Content-Type':'application/json'
                 },
@@ -45,7 +46,8 @@
             });
             console.log(response.status);
             if(response.status==200){
-                 window.location.href='./login.html'
+                 window.location.href='./homepage.html'
+                 alert("logged in successfully")
             }
             else if(response.status==404){
                 alert('already exist')
