--- a/KBA-COURSE/TAILWIND/updatecourse.html
+++ b/KBA-COURSE/TAILWIND/updatecourse.html
@@ -22,7 +22,7 @@
         </div>
     </nav>
 
-    <div class="max-w-xl mx-auto mt-10 bg-white p-8 shadow-lg rounded-lg">
+    <div class="max-w-xl mx-auto mt-10 bg-purple-300 p-8 shadow-lg rounded-lg">
         <h1 class="text-2xl font-bold mb-6">Update Course</h1>
         <form action="">
             <div class="mb-4">
