--- a/CERTI-APP/MAP/FRONTEND/signup.html
+++ b/CERTI-APP/MAP/FRONTEND/signup.html
@@ -4,28 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
-
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="flex justify-center mt-64">
-        <div class="bg-purple-300 max-w-98 p-8 rounded-lg shadow-2xl shadow-indigo-300	">
-        <p class="font-mono text-2xl indent-20 ">Sign Up</p>
 
-        <div class="mt-4 "><label for="">Name:</label><br>
-            <input type="" placeholder="" class="ring-2 hover:ring-4">
-            <div class="mt-4"></div><label for="">Email:</label><br>
-            <input type="email" placeholder="" class="ring-2 hover:ring-4">
-            <div class="mt-4"></div><label for="">Password:</label><br>
-            <input type="password" placeholder="" class="ring-2 hover:ring-4">
-            <div class="mt-4"><label for="account-type">Account Type:</label><br>
-            <select name="" id="account-type" class="ring-2 hover:ring-4">
-                <option value="admin">Admin</option>
-                <option value="user">User</option>
+<body>
+    <div class="bg-stone-300 w-2/6 p-10 rounded-lg font-sans shadow-xl mt-40 mx-auto">
+        <form onsubmit="handleSubmit(event)" class="flex flex-col">
+            <p class="font-mono font-bold text-3xl text-center mb-8">SIGN UP</p>
+
+            <label for="FirstName" class="mt-4 font-mono">First Name:</label>
+            <input type="text" id="FirstName" class="w-full h-12 rounded-lg border border-indigo-600 ring-2 ring-transparent focus:ring-indigo-500 focus:ring-2 hover:ring-indigo-400 transition" required>
+
+            <label for="LastName" class="mt-4 font-mono">Last Name:</label>
+            <input type="text" id="LastName" class="w-full h-12 rounded-lg border border-indigo-600 ring-2 ring-transparent focus:ring-indigo-500 focus:ring-2 hover:ring-indigo-400 transition" required>
+
+            <label for="UserName" class="mt-4 font-mono">User Name:</label>
+            <input type="text" id="UserName" class="w-full h-12 rounded-lg border border-indigo-600 ring-2 ring-transparent focus:ring-indigo-500 focus:ring-2 hover:ring-indigo-400 transition" required>
+
+            <label for="Password" class="mt-4 font-mono">Password:</label>
+            <input type="password" id="Password" class="w-full h-12 rounded-lg border border-indigo-600 ring-2 ring-transparent focus:ring-indigo-500 focus:ring-2 hover:ring-indigo-400 transition" required>
+
+            <label for="UserRole" class="mt-4 font-mono">Select User Role:</label>
+            <select id="UserRole" class="w-full h-12 rounded-lg border border-indigo-600 ring-2 ring-transparent focus:ring-indigo-500 focus:ring-2 hover:ring-indigo-400 transition">
+                <option value="Admin">Admin</option>
+                <option value="User">User</option>
             </select>
 
+            <button type="submit" class="mt-6 bg-gray-900 rounded-lg min-w-24 px-4 py-2 text-white border border-indigo-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 transition">
+                Signup
+            </button>
 
-            <div><button class="mt-4 float-right border-2 border-stone-950 bg-violet-600 px-2  focus:ring-2 ring-blue-500">Sign Up</button></div>
-        <div class="mt-20"><p>Already have an account? <a href="login.html" class="text-sky-600">Login</a></p>
-</div>
+            <p class="mt-4 font-mono text-center">Already have an account? <a class="text-blue-600 hover:underline" href="login.html">Login</a></p>
+        </form>
+    </div>
+
+
+
+    <script>
+        async function handleSubmit(event) {
+            event.preventDefault();
+            
+            const fname = document.getElementById('FirstName').value;
+            const lname = document.getElementById('LastName').value;
+            const userName = document.getElementById('UserName').value;
+            const password = document.getElementById('Password').value;
+            const role = document.getElementById('UserRole').value;
+
+            try {
+                const response = await fetch("http://127.0.0.1:4000/signup", {
+                    method: "POST",
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({
+                        FirstName: fname,
+                        LastName: lname,
+                        UserName: userName,
+                        Password: password,
+                        Role: role
+                    })
+                });
+
+                if (response.status === 201) {
+                    alert("Successfully Registered");
+                    window.location.href = './login.html';
+                } else if (response.status === 403) {
+                    alert("User already registered");
+                } else {
+                    alert("Server Error! Try again later.");
+                }
+            } catch (error) {
+                console.error("Error:", error);
+                alert("An error occurred. Please try again later.");
+            }
+        }
+    </script>
 </body>
 </html>
