--- a/KBA-COURSE/MONGODB/FRONTEND/addcourse.html
+++ b/KBA-COURSE/MONGODB/FRONTEND/addcourse.html
@@ -78,13 +78,13 @@
 <body>
     <!-- Navigation and Logo Section -->
     <div class="bg-purple-400 h-20 flex items-center p-4">
-        <img class="w-16 h-16" src="../TAILWIND/images/kbalogo.png" alt="KBA Logo">
+        <img class="w-16 h-16" src="./kbalogo.png" alt="KBA Logo">
         <div class="ml-auto flex space-x-6">
             <a href="homepage.html" class="text-white hover:underline">Home</a>
-            <a href="" class="text-white hover:underline">Courses</a>
+            <!-- <a href="" class="text-white hover:underline">Courses</a> -->
             <a href="addcourse.html" class="text-white hover:underline">Add Courses</a>
-            <a href="" class="text-white hover:underline">Contact Us</a>
-            <a href="login.html" class="text-white hover:underline">Logout</a>
+            <!-- <a href="" class="text-white hover:underline">Contact Us</a>
+            <a href="login.html" class="text-white hover:underline">Logout</a> -->
         </div>
     </div>
 
