--- a/CERTI-APP/MONGODB/FRONTEND/signup.html
+++ b/CERTI-APP/MONGODB/FRONTEND/signup.html
@@ -3,29 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <title>SignUp</title>
+    <script>
 
-    <script src="https://cdn.tailwindcss.com"></script>
+        async function signin(event){
+            event.preventDefault();
+
+            const name=document.getElementById('name').value
+            const email=document.getElementById('email').value
+            const password=document.getElementById('password').value
+            const username=document.getElementById('username').value
+            const role=document.getElementById('role').value
+
+            console.log(name,email,password,username,role);
+
+            try {
+        const response = await fetch("http://127.0.0.1:4000/signup", {
+            method: 'POST',
+            headers: { "Content-Type": 'application/json' },
+            body: JSON.stringify({
+                Fname: name,
+                Email: email,
+                Username: username,
+                Password: password,
+                Role: role
+            })
+        });
+                console.log(response.status);
+                if (response.status === 400) {
+                    console.log("Username Already Exist")
+                    alert("Username Already Exist");
+                } else if (response.status === 201) {
+                    alert("Account created successfully");
+                    console.log("Account created successfully");                    
+                    window.location.href = './login.html';
+                } else {
+                    alert("Internal Server error");
+                    console.log("Internal Server error");                    
+
+                }
+    } catch (error) {
+        console.error('Error:', error);
+        alert("Failed to create account. Please try again.");
+    }
+}  
+ </script>
+
+
+
 </head>
-<body class="flex justify-center mt-64">
-        <div class="bg-purple-300 max-w-98 p-8 rounded-lg shadow-2xl shadow-indigo-300	">
-        <p class="font-mono text-2xl indent-20 ">Sign Up</p>
+<body class="h-screen bg-cover bg-center" style="background-image: url('./images/bg5.jpeg');">
+    <div class="flex justify-center items-center h-full">
+        <div class="bg-transparent backdrop-blur-md h-auto max-w-md w-full mx-4 rounded-xl  shadow shadow-2xl  p-8 border border-gray-200">
 
-        <div class="mt-4 "><label for="">Name:</label><br>
-            <input type="" placeholder="" class="ring-2 hover:ring-4">
-            <div class="mt-4"></div><label for="">Email:</label><br>
-            <input type="email" placeholder="" class="ring-2 hover:ring-4">
-            <div class="mt-4"></div><label for="">Password:</label><br>
-            <input type="password" placeholder="" class="ring-2 hover:ring-4">
-            <div class="mt-4"><label for="account-type">Account Type:</label><br>
-            <select name="" id="account-type" class="ring-2 hover:ring-4">
-                <option value="admin">Admin</option>
-                <option value="user">User</option>
-            </select>
-
-
-            <div><button class="mt-4 float-right border-2 border-stone-950 bg-violet-600 px-2  focus:ring-2 ring-blue-500">Sign Up</button></div>
-        <div class="mt-20"><p>Already have an account? <a href="login.html" class="text-sky-600">Login</a></p>
-</div>
+            <p class="text-3xl font-bold text-center mb-4 text-gray-900">Sign In</p>
+            <form onsubmit="signin(event)">
+                <div class="mb-4">
+                    <label class=" text-gray-600" for="name" > Name:</label>
+                    <input type="text" id="name" class="mt-3 bg-gray-100 w-full p-2 rounded-lg" required>
+                </div>
+                <div class="mb-4">
+                    <label class=" text-gray-600" for="email" >Email:</label>
+                    <input type="email" id="email"  class="mt-3 bg-gray-100 w-full p-2 rounded-lg" required>
+                </div>
+                <div class="mb-4">
+                    <label class=" text-gray-600" for="password">Password:</label>
+                    <input type="password" id="password"  class="mt-3 bg-gray-100 w-full p-2 rounded-lg" required>
+                </div>
+                <div class="mb-4">
+                    <label class=" text-gray-600" for="username">Username :</label>
+                    <input type="text" id="username"  class="mt-3 bg-gray-100 w-full p-2 rounded-lg" required>
+                </div>
+                <div class="mb-4">
+                    <label class=" mb-2 text-sm text-gray-600 font-medium">Role :</label>
+                    <select id="role" class="w-full px-4 py-2 border rounded-lg " id="role">
+                        <option value="">Select Role</option>
+                        <option value="admin">Admin</option>
+                        <option value="user">User</option>
+                    </select>
+                </div>
+                <input type="submit" value="Create Account" class="mt-2 bg-gray-400 text-black ml-28 border border-gray-900	hover:bg-gray-700 hover:border border-gray-200 text-white font-bold py-2 px-4 rounded">
+                <p class="mt-4 text-gray-600">Already have an Account? &nbsp;<a class="text-gray-500	" href="login.html"> Login</a></p>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
