--- a/CERTI-APP/MONGODB/FRONTEND/issuecerti.html
+++ b/CERTI-APP/MONGODB/FRONTEND/issuecerti.html
@@ -58,15 +58,14 @@
 <body> 
     <div >
         <nav class="flex float-right mt-4 ">
-          <a href="home.html" class="border border-slate-950 w-24 h-10 mr-10 text-xl   text-center bg-blue-600"><p class=" mt-1 text-white ">Home</p></a>
+          <a href="home.html" class="border border-slate-950 w-24 h-10 mr-10 text-xl   text-center bg-purple-400"><p class=" mt-1 text-black ">Home</p></a>
          <a href="issuecerti.html" class="mr-32 text-xl mt-2">Issue Certificate</a> 
         </nav>
      </div>
-     <div class="mt-0 text-white ">Certificate Dapp</div> 
-     <div class="mt-8 text-2xl ml-12 font-bold  ">Certificate Dapp</div> 
+     <div class="mt-8 text-2xl ml-12 font-bold text-purple-900 ">Certificate Dapp</div> 
 
      <form action="" onsubmit="issuecerti(event)">
-        <div class="bg-blue-100  indent-0 w-[600px] max-h-screen mt-12 mx-auto  rounded-lg shadow-xl shadow-indigo-400">
+        <div class="bg-purple-200  indent-0 w-[600px] max-h-screen mt-12 mx-auto  rounded-lg shadow-xl shadow-violet-400">
             <div class=" pl-4 ">
                 <p class="mt-14 pt-6 pl-1 text-2xl ">Issue New Certificate</p>
                 <div class="mt-4" >Select Course*</div>
@@ -96,9 +95,10 @@
                 <div class="mt-2"><input id="issuedt" class="h-9 w-11/12"  required type="date"></div>
         
                 <div class="mt-4">
-                    <button class="h-9 w-32  bg-cyan-400">issue Certificate</button> 
-                    <div class="mt-0 text-purple-100">Certificate Dapp</div> 
-                    <a href="viewcerti.html">View Certificate</a>
+                    <button class="h-9 w-32  bg-purple-400">issue Certificate</button> 
+                    <br>
+                    <!-- <div class="mt-0 text-purple-100">Certificate Dapp</div> 
+                    <a href="viewcerti.html">View Certificate</a> -->
                     <br>
                     
                 </div>
