--- a/CERTI-APP/MONGODB/FRONTEND/viewcerti.html
+++ b/CERTI-APP/MONGODB/FRONTEND/viewcerti.html
@@ -33,7 +33,7 @@
   };
     </script>
 </head>
-<body class="bg-fuchsia-100" >
+<body class="bg-purple-200" >
     <div class="">
         <div class=" mt-44 flex justify-center text-2xl font-semibold">
         <label for="">Kerala Blockchain Academy</label></div>
@@ -41,7 +41,7 @@
         <div class=" mt-4 flex justify-center"><p class="ml-8">This is to certify that <b id="name"></b> </p></div>
           <div class=" mt-4 flex justify-center"> <p> has successfully completed <b id="course"></b></p></div>
            <div class=" mt-4 flex justify-center"> with  &nbsp;<b id="grade"></b> &nbsp;  &nbsp;<b id="issuedt"></b></p></div>
-            <div class=" mt-4 flex justify-center"><a href="issuecerti.html" align="right">back</a></div>
+            <div class=" mt-4 flex justify-center"><a href="home.html" align="right">back</a></div>
     </div>
         
 
